# geo-cache

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  skaffold.yaml
geo_cache/: app.py  config.py
k8s/: deployment.yaml  redis.yaml  service.yaml
tests/: test_app.py
